# kyvos-sm-skills

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  intent-adventureworks.txt  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
docs/: api-reference.md  claude-skill-usage.md  deployment-guide.md  phase0-decisions.md  quickstart.md  reference-architecture.md  sample-gallery.md
docs/tutorials/: adventure-works.md  healthcare.md  retail-banking.md  telecom.md  (+1 more)
kyvos_sm_skills/: __init__.py  cli.py  contract_adapter.py  intent_generator.py  knowledge_base.py  llm_designer.py  mdx_reference.py  models.py  skill_runner.py  spec_builder.py  type_mapping.py
samples/: adventureworks-sm-design.json
scripts/: check_raw_validation.py  check_sm_validation.py  compile_compare.py  generate_samples.py  get_deployed_sm.py  inspect_flow_a.py  remove_orphaned.py  test_live_discover.py  validate_adventureworks_discover.py  validate_sandbox_deploy.py  validate_sandbox_discover.py  validate_skill_flow_adventureworks.py
skills/: deploy-from-pbit.md  deploy-from-xmla.md  design-star-schema.md  discover-sm-from-warehouse.md  generate-connection.md  generate-dataset.md  generate-drd.md  generate-semantic-model.md  generate-sm-from-intent.md
tests/: __init__.py  test_adventureworks_e2e_comparison.py  test_cleanup_hardening.py  test_cleanup_safety.py  test_cli_discover.py  test_connection.py  test_contract_adoption.py  test_dataset.py  test_drd.py  test_integration.py  test_intent_generator.py  test_knowledge_base.py  test_llm_designer.py  test_mdx_reference.py  test_models.py  test_parent_child_hierarchy.py  test_skill_flow_discover.py  test_skill_flow_validation.py  test_skill_snippets.py  test_smodel.py  test_spec_builder.py  test_type_mapping.py
(+82 files in other folders)
